[package]
name = "zkevm-circuits"
version = "0.1.0"
authors = ["therealyingtong <yingtong@z.cash>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }
num = "0.4"
sha3 = "0.10"
array-init = "2.0.0"
bus-mapping = { path = "../bus-mapping" }
either = "1.9"
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
ethers-core = "0.17.0"
ethers-signers = { version = "0.17.0", optional = true }
mock = { path = "../mock", optional = true }
strum = "0.24"
strum_macros = "0.24"
rand_xorshift = "0.3"
rand = "0.8"
itertools = "0.10.3"
lazy_static = "1.4"
mpt-zktrie = { path = "../zktrie" }
keccak256 = { path = "../keccak256"}
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"

hash-circuit = { package = "poseidon-circuit", git = "https://github.com/scroll-tech/poseidon-circuit.git", branch = "scroll-dev-0723"}
misc-precompiled-circuit = { package = "misc-precompiled-circuit", git = "https://github.com/scroll-tech/misc-precompiled-circuit.git", tag = "v0.1.0" }

halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.1", default-features=false, features=["halo2-pse","display"] }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.1", default-features=false, features=["halo2-pse","display"] }

maingate = { git = "https://github.com/privacy-scaling-explorations/halo2wrong", tag = "v2023_02_02" }

libsecp256k1 = "0.7"
num-bigint = { version = "0.4" }
subtle = "2.4"
rand_chacha = "0.3"
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.3" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", tag = "v0.1.3", default-features=false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }
hex = "0.4.3"
rayon = "1.5"
once_cell = "1.17.0"

[dev-dependencies]
bus-mapping = { path = "../bus-mapping", features = ["test"] }
criterion = "0.3"
ctor = "0.1.22"
ethers-signers = "0.17.0"
hex = "0.4.3"
itertools = "0.10.1"
mock = { path = "../mock" }
pretty_assertions = "1.0.0"
cli-table = "0.4"
paste = "1.0"

[features]
default = ["test", "test-circuits", "shanghai", "debug-annotations"]
test = ["ethers-signers", "mock", "bus-mapping/test"]

# Currently, when the "scroll" feature is enabled, unittests use a CGO scroll-evm to generate execution traces.
# However, the local scroll-evm tracer is not finished yet, so it cannot generate a full block trace like
# <https://github.com/scroll-tech/test-traces/>. Therefore, to make the super circuit-related CI pass, we have to disable
# some constraints related to the poseidon codehash / mpt lookup by disabling the feature "scroll-trace".
# On the other hand, the scroll-zkevm repo enables both "scroll" and "scroll-trace",
# so these poseidon code hash constraints and mpt lookup are enabled there.
# TODO: When the local scroll-evm tracer is finished, we can then enable the "scroll-trace" feature.
scroll = ["bus-mapping/scroll", "eth-types/scroll", "mock?/scroll", "zktrie", "poseidon-codehash", "scroll-trace"]
scroll-trace = []

# Enable shanghai feature of mock only if mock is enabled (by test).
shanghai = ["bus-mapping/shanghai", "eth-types/shanghai", "mock?/shanghai"]
test-circuits = []
warn-unimplemented = ["eth-types/warn-unimplemented"]
onephase = [] # debug only
zktrie = []
poseidon-codehash = []

debug-annotations = []
