[package]
name = "zkevm-circuits"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs.workspace = true
num.workspace = true
sha3.workspace = true
array-init = "2.0.0"
bus-mapping = { path = "../bus-mapping" }
either = "1.9"
eth-types = { path = "../eth-types" }
gadgets = { path = "../gadgets" }
ethers-core.workspace = true
ethers-signers = { workspace = true, optional = true }
mock = { path = "../mock", optional = true }
strum.workspace = true
strum_macros.workspace = true
rand_xorshift.workspace = true
rand.workspace = true
itertools.workspace = true
lazy_static.workspace = true
mpt-zktrie = { path = "../zktrie" }
keccak256 = { path = "../keccak256"}
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

hash-circuit.workspace = true
misc-precompiled-circuit = { package = "misc-precompiled-circuit", git = "https://github.com/scroll-tech/misc-precompiled-circuit.git", tag = "v0.1.0" }

halo2-base = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.5", default-features=false, features=["halo2-pse","display"] }
halo2-ecc = { git = "https://github.com/scroll-tech/halo2-lib", tag = "v0.1.5", default-features=false, features=["halo2-pse","display"] }
halo2_gadgets = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop", features = ["unstable"] }

num-bigint.workspace = true
subtle.workspace = true
rand_chacha.workspace = true
snark-verifier.workspace = true
snark-verifier-sdk.workspace = true
hex.workspace = true
rayon.workspace = true
once_cell.workspace = true

[dev-dependencies]
bus-mapping = { path = "../bus-mapping", features = ["test"] }
criterion = "0.3"
ctor.workspace = true
mock = { path = "../mock" }
pretty_assertions.workspace = true
cli-table = "0.4"
paste = "1.0"

[features]
default = ["test", "test-circuits", "shanghai", "debug-annotations", "parallel_syn", "enable-stack", "enable-storage"]
test = ["ethers-signers", "mock", "bus-mapping/test"]

scroll = ["bus-mapping/scroll", "eth-types/scroll", "mock?/scroll", "zktrie", "poseidon-codehash"]

# Enable shanghai feature of mock only if mock is enabled (by test).
shanghai = ["bus-mapping/shanghai", "eth-types/shanghai", "mock?/shanghai"]
test-circuits = []
warn-unimplemented = ["eth-types/warn-unimplemented"]
onephase = [] # debug only
zktrie = []
poseidon-codehash = []
parallel_syn = ["hash-circuit/parallel_syn", "halo2_proofs/parallel_syn"]

debug-annotations = []

enable-stack = ["bus-mapping/enable-stack"]
enable-memory = ["bus-mapping/enable-memory"]
enable-storage = ["bus-mapping/enable-storage"]
