[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 2 # fast and small wasm

[lib]
crate-type = ["cdylib"]

[dependencies]
light-client-poc = { path="..", default-features = false }
revm = { version = "3.5.0", default-features = false }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
eyre = { version="0.6.9", default-features=false }
serde_json = "1.0.108"
getrandom = { version="0.2", features=["js"] }
ethers = "2.0.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
