[package]
name = "mpt-witness-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
gobuild = "0.1.0-alpha.1"
log = "0.4.14"
env_logger = "0.9"
glob = "0.3.1"

[dependencies]
eth-types = { path = "../../eth-types" }
ethers = "2.0"
num_enum = "0.7.0"
serde = "1.0.188"
serde_json = "1.0.105"
hex = {version = "0.4.3", features = ["serde"]}
strum = "0.24"
strum_macros = "0.24"
